--- a/spec/fixtures/build_ex/index.html
+++ b/spec/fixtures/build_ex/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Pug Autocompile plugin for Atom</title>
+    <title>Demo</title>
     <link href="/assets/css/main.css">
 </head>
-
 <body>
     <h1>Hello from Pug :)</h1>
 </body>
-
 </html>
